--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -163,10 +163,12 @@ $("#choose-img-http").slideDown();
 
 $('#select-url-img-input').click(function(){
              var strLen = $('#url-img-input').val().length; 	  
+             var myStr = $('#url-img-input').val();
              if ($('#url-img-input').val().charAt(strLen - 1) == '/') {
-                 var myStr = $('#url-img-input').val().slice(0, strLen-1);
+                 myStr = $('#url-img-input').val().slice(0, strLen-1);
              }
              $('#url-img-input').val(myStr);
+	     alert(myStr); 
 
              $("#prize-image-preview").html("<img id='img-img-preview' style='width: 100%; height: 246px;' src=" + myStr + " />");
              $("#prize-remove-image").show();
