--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -137,7 +137,7 @@
 
 	<div id="overlay-div-content3" >
 		<div class="overlay-top">
-                    {%ifequal campaign.campaign.type "discount" %}
+                    {%ifequal campaign.campaign_type "discount" %}
                     <p>Discount Code</p>
                     {% else %}
                     <p>Successfully Entered Contest</p>
