--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -92,7 +92,7 @@
 
 	<div id="overlay-div-content2-facebook" >
                 <div class="overlay-top">
-                    {%ifequal campaign.campaign.type "discount" %}
+                    {%ifequal campaign.campaign_type "discount" %}
                     <p>Discounts Are Better When You Share Them</p>
                      {% else %}  
                     <p>Share and win, it's that simple</p>
