--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -144,7 +144,7 @@
                     {% endifequal %}
                 </div>
 
-                {%ifequal campaign.campaign.type "discount" %}
+                {%ifequal campaign.campaign_type "discount" %}
 
 		<div id="code-msg">Thanks for sharing.<BR> Here is your discount code:</div>
 		<div id="code">
