Removing peeople from about.

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -10,7 +10,7 @@
 
 
 {% block site-content %}
-<div id="parent-about">
+<!--<div id="parent-about">
 <div class="person">
 <div class="photo">Photo</div>
 <div class="content">Albert Chow - CEO </div>
@@ -21,6 +21,7 @@
 <div class="content">Mike Preshman - CTO</div>
 </div>
 </div>
+-->
 
 
 <div style="margin: 100px 0px 0px 100px; width: 90%;">
