Fixing up some things.

--- a/core/templates/test.html
+++ b/core/templates/test.html
@@ -56,6 +56,10 @@ div.image_preview  img{
 	width: 200px;
 	height: 200px;
 }
+body{
+	background-image: url('http://www.demo.com:8000/site_media/images/gradient3.jpeg');
+        background-repeat: repeat-x;
+}
   </style>
 
 
