--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -7,7 +7,9 @@
 {% endblock %} 
 
 {% block site-content %}
-<br/><br/><br/><br/>
+<br/>
+<h2 style="margin: 10px; text-align:center; font-size: 22px; color: red; font-family:'Arial Rounded MT Bold', 'Arial';">RippleFunction Converts Event Attendees Into Evangelists <br /><br />...So That Your Event Sells Out</h2>
+<br/><br/>
 <div id="content-front">
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="383" id="viddler_251a4028"><param name="movie" value="http://www.viddler.com/player/251a4028/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/251a4028/" width="545" height="383" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_251a4028"></embed></object>
 </div>
