Adding logo that is transparent and high res.

--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -1,6 +1,6 @@
     <div id="header">
       <div id="header-container">
-		<div id ="logo"><img height="35px" src="{% url static 'images/rf-logo.png' %}"></div>
+		<div id ="logo"><img height="35px" src="{% url static 'images/logo-2color-blue-S.png' %}"></div>
 	  	<div id="links">
             <a href="/create_campaign">Get RippleFunction</a> &nbsp;&nbsp; 
 	    	<a href="#">How it Works</a> &nbsp;&nbsp; 
