Adding contact, howitworks and some other small tweeks.

--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -6,16 +6,16 @@
  	<link rel="stylesheet" href="{% url static 'css/about.css' %}" type="text/css" />
 	{% endblock %}
 
-{% block title %}About{% endblock %}
+{% block title %}Contact{% endblock %}
 
 
 {% block site-content %}
+
 <div class="person">
 <div class="photo">Photo</div>
 <div class="content">Mike Preshman: mike@ripplefunction.com</div>
 </div>
 <!--
-
 <div class="person">
 <div class="photo">Photo</div>
 <div class="content">Mike Preshman - CTO</div>
