--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -2,9 +2,9 @@
       <div id="header-container">
 		<div id ="logo"><img height="35px" src="{% url static 'images/logo-2color-blue-S.png' %}"></div>
 	  	<div id="links">
-            <a href="/create_campaign">Get RippleFunction</a> &nbsp;&nbsp; 
-	    	<a href="#">How it Works</a> &nbsp;&nbsp; 
-	    	<a href="#">Contact</a>
+            <a href="{% url create_campaign %}" style="font-size:20px;">Try It Now</a> &nbsp;&nbsp; 
+	    	<a href="{% url howitworks %}">How it Works</a> &nbsp;&nbsp; 
+	    	<a href="{% url contact %}">Contact</a>
 	  	</div>
 	</div>
     </div>
