--- a/static/css/analytics/content.css
+++ b/static/css/analytics/content.css
@@ -50,11 +50,11 @@ table.google-visualization-table-table * {padding: 0px;}
 	padding: 5px 5px 5px 5px;
 	margin-bottom: 10px;
 	font-size: 16px;
-	font-weight:normal;
+	font-weight:bold;
 }
 #influenceTitle {
 	padding: 5px 5px 5px 0px;
-	margin-bottom: 10px;
+	margin: 10px 10px 10px 20px;
 	font-size: 16px;
 	font-weight:normal;
 }
@@ -154,4 +154,13 @@ tr.oddTableRow {}
 	background-repeat: no-repeat;
 	font-size: 14px;
 	letter-spacing: .3em;
+}
+
+#stats {
+        background-color: #fff;
+	border: 1px solid #ccc;
+	margin: 20px 20px 20px 0px;
+        font-size: 14px;
+	font-weight: bold;
+	padding: 10px;
 }
