Displaying on analytics page total clicks.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -132,7 +132,7 @@ Analytics
    	 <p>Total Twitter Shares: &nbsp; {{total_twitter_shares}}</p>
 	 <p>Total Facebook Reach: &nbsp; {{total_facebook_reach}}</p>
 	 <p>Total Twitter Reach: &nbsp; {{total_twitter_reach}}</p>
-	 <p>Total Page Views: &nbsp; {{campaign.page_views}}</p>
+	 <p>Total Page Views: &nbsp; {{campaign.page_views_total}}</p>
 	 <p>Top Level Page Views: &nbsp; {{campaign.page_views}}</p>
 	 </div>
     
