--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -17,6 +17,8 @@ Analytics
 <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>	
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 <script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
+<script type="text/javascript" src="{% url static 'javascript/jquery.tooltip.js' %}" ></script>
+<link rel="stylesheet" type="text/css" href="{% url static 'css/jquery.tooltip.css' %}">	
 {% endblock %}
 
 
@@ -128,19 +130,19 @@ Analytics
 
 			     
 	 <div id="stats" class="span-24 last">	
-	 <p>Total Facebook Shares: &nbsp; {{total_facebook_shares}}</p>
-   	 <p>Total Twitter Shares: &nbsp; {{total_twitter_shares}}</p>
-	 <p>Total Facebook Reach: &nbsp; {{total_facebook_reach}}</p>
-	 <p>Total Twitter Reach: &nbsp; {{total_twitter_reach}}</p>
-	 <p>Total Page Views: &nbsp; {{campaign.page_views_total}}</p>
-	 <p>Top Level Page Views: &nbsp; {{campaign.page_views}}</p>
+	 <p id="total_fshares" title="Total number of Shares for this promotion on facebook.">Total Facebook Shares: &nbsp; {{total_facebook_shares}}</p>
+   	 <p id="total_tshares" title="Total number of tweets for this promotion on twitter.">Total Twitter Shares: &nbsp; {{total_twitter_shares}}</p>
+	 <p id="total_freach" title="Total number of people to potentially see this <br/>share on facebook. (Total Facebook Impressions)">Total Facebook Reach: &nbsp; {{total_facebook_reach}}</p>
+	 <p id="total_treach" title="Total number of people to potentially see this <br/>share on facebook. (Total Twitter Impressions)">Total Twitter Reach: &nbsp; {{total_twitter_reach}}</p>
+	 <p id="total_page_views" title="Total number of times this promotion has been clicked on.">Total Page Views: &nbsp; {{campaign.page_views_total}}</p>
+	 <p id="total_top_page_views" title="Total number the top level page has been clicked on. (Not shared or referred)">Top Level Page Views: &nbsp; {{campaign.page_views}}</p>
 	 </div>
     
 		<div class="span-24 last"><br/><br/><br/></div>
 
-
 	<script> 
-
+	      
+             $('#stats p').tooltip();
 	  
 	      //$("#date_column_chart").showLoading({'afterShow': function(){ setTimeout( "jQuery('#date_column_chart').hideLoading()", 2000 );}});
 	      //$("#midRight").showLoading({'afterShow': function(){ setTimeout( "jQuery('#midRight').hideLoading()", 2000 );}});         
