Working on widget functionality.

--- a/core/templates/test.html
+++ b/core/templates/test.html
@@ -176,7 +176,7 @@ $(document).ready(function() {
 
 </script>							
         
-
+<div id="ripple-embed"></div>
 <script type="text/javascript" src="{% url static 'javascript/embed.js' %}" ></script>
 
 <button>HI</button>
